--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,65 +1,70 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="blog-panel">
-        <div class="row">
-            <div class="col-sm-9">
-                <div class="thumbnail">
-                    <img src="/static/img/blog/big.png"></img>
+    <div class="">
+        <div class="blog-panel narrow76">
+            <div class="row heigh90 bottom2">
+                <div class="col-sm-9">
+                    <div class="thumbnail">
+                        <img src="/static/img/blog/big.png"></img>
+                    </div>
+                </div>
+
+                <div class="yy-grid">
+                    <div class="col-sm-3">
+                        <hr class="yy-bar"/>
+                        <p class="yy-content">Join us to stay up to date
+                           on all things DIY, dessert&cake decoration!</p>
+
+                        <div class="input-group ">
+                            <input type="email" class=" email-zone" placeholder="Email address">
+                            <button type="button" class="btn-yy">Start</button>
+                        </div>
+                        <div class="align-center">
+                            <p>
+                                <b>Instagram:<a href="https://www.instagram.com/dessertdecor_official/">@dessertdecor_offical</a></b>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="yy-grid">
-                <div class="col-sm-3">
-                    <hr class="yy-bar"/>
-                    <p class="yy-content">Join us to stay up to date
-                       on all things DIY, dessert&cake decoration!</p>
-
-                    <div class="input-group ">
-                        <input type="email" class=" email-zone" placeholder="Email address">
-                        <button type="button" class="btn-yy">Start</button>
+            <div class="row top3">
+                <div class="col-sm-5 blog-summary">
+                    <div class="thumbnail ">
+                        <img src="/static/img/blog/sm_1.png">
                     </div>
 
-                    <p><b>Instagram:<a href="">@foodplayoffical</a></b></p>
+                </div>
+                <div class="col-sm-7 ">
+                    <p class="yy-blog-title">Foodplay @Wework office</p>
+                    <p class="datetime">Feb 24, 2016</p>
                 </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="thumbnail">
-                    <img src="/static/img/blog/sm_1.png">
+            <div class="row top3">
+                <div class="col-sm-5 blog-summary">
+                    <div class="thumbnail ">
+                        <img src="/static/img/blog/sm_2.png">
+                    </div>
+
                 </div>
-
-            </div>
-            <div class="col-sm-6">
-                <h1 class="yy-blog-title">Foodplay @Wework office</h1>
-                <p class="datetime">Feb 24, 2016</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="thumbnail">
-                    <img src="/static/img/blog/sm_2.png">
+                <div class="col-sm-7">
+                    <p class="yy-blog-title ">Foodplay @The New School</p>
+                    <p class="datetime">Feb 22, 2016</p>
                 </div>
-
             </div>
-            <div class="col-sm-6">
-                <h1 class="yy-blog-title">Foodplay @The New School</h1>
-                <p class="datetime">Feb 22, 2016</p>
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="thumbnail">
-                    <img src="/static/img/blog/sm_3.png">
+            <div class="row top3">
+                <div class="col-sm-5 blog-summary">
+                    <div class="thumbnail">
+                        <img src="/static/img/blog/sm_3.png">
+                    </div>
+
                 </div>
-
-            </div>
-            <div class="col-sm-6">
-                <h1 class="yy-blog-title">Foodplay @Facebook page</h1>
-                <p class="datetime">Nov 4, 2015</p>
+                <div class="col-sm-7">
+                    <p class="yy-blog-title">Foodplay @Facebook page</p>
+                    <p class="datetime">Nov 4, 2015</p>
+                </div>
             </div>
         </div>
     </div>
