--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
     </span>
 </span>
 </div>
-<div class="row yy-content">
+<div class="row narrow80 heigh90">
     <div class="col-sm-6">
 
     <img src="/static/img/home/why.png" class="frame">
@@ -24,8 +24,8 @@
     </div>
 </div>
 <div class="align-center yy-content">
-    <div class="container">
-        <h1>Sign up for DESSERT DECOR awesomeness!</h1>
+    <div class="container sign-up">
+        <p>Sign up for DESSERT DECOR awesomeness!</p>
 
     </div>
     <div class="container ">
@@ -34,32 +34,47 @@
             <button type="button" class="btn-yy">Start</button>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-2 thumbnail">
 
-            <img src="/static/img/home/20.pic.png">
-        </div>
-        <div class="col-sm-2 thumbnail">
+    <div class="narrow90">
+        <table>
+            <tr>
+                <td>
+                    <div class="thumbnail narrow80">
 
-            <img src="/static/img/home/19.pic.png">
-        </div>
-        <div class="col-sm-2 thumbnail">
+                        <img src="/static/img/home/20.pic.png">
+                    </div>
+                </td>
 
-            <img src="/static/img/home/17.pic.png">
-        </div>
-        <div class="col-sm-2 thumbnail">
+                <td>
+                    <div class="thumbnail narrow80">
 
-            <img src="/static/img/home/31.pic.png">
-        </div>
-        <div class="col-sm-2 thumbnail">
+                        <img src="/static/img/home/19.pic.png">
+                    </div>
+                </td>
 
-            <img src="/static/img/home/3.pic.png">
-        </div>
-        <div class="col-sm-1">
+                <td>
+                    <div class="thumbnail narrow80">
 
-        </div>
+                        <img src="/static/img/home/17.pic.png">
+                    </div>
+                </td>
+
+                <td>
+                    <div class="thumbnail narrow80">
+
+                        <img src="/static/img/home/31.pic.png">
+                    </div>
+                </td>
+
+                <td>
+                    <div class="thumbnail narrow80">
+
+                        <img src="/static/img/home/3.pic.png">
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
+
 </div>
 {% endblock %}
