--- a/templates/production.html
+++ b/templates/production.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <div class=" yy-content">
+    <div class=" narrow80">
 
         <div class="content container">
                 {% block inner %}
@@ -9,8 +9,8 @@
         </div>
 
         <div class="product-footer">
-            <h2>Create your own cake to your friends and family embedded with creative decorations!</h2>
-            <h2>Show me more on <a href="/tips">Tips page</a></h2>
+            <p>Create your own cake to your friends and family embedded with creative decorations!</p>
+            <p>Show me more on <a href="/tips" class="purple">Tips page</a></p>
 
         </div>
     </div>
