--- a/templates/shop.html
+++ b/templates/shop.html
@@ -6,16 +6,16 @@
         </span>
     </div>
     <div class="container yy-content align-center">
-        <div class="title-shop">
-            <h2> Creative Decoration Kits</h2>
+        <div class="title-shop top3 ">
+            <p> Creative Decoration Kits</p>
         </div>
 
         <div class="row">
             <div class="col-lg-4">
                 <div class="shop-card">
                     <a href="/cheese-cake">
-                        <div class="thumbnail">
-                            <img src="/static/img/kit%20list/_DSC3843.png">
+                        <div class="thumbnail narrow90">
+                            <img src="/static/img/kit%20list/1.png">
                             <div class="caption">
                                 <div class="row">
                                     <div class="col-sm-9 vertical-line description">
@@ -35,8 +35,8 @@
             <div class="col-lg-4">
                 <div class="shop-card">
                     <a href="/butter-cookie">
-                        <div class="thumbnail">
-                            <img src="/static/img/kit%20list/FullSizeRender%203%20copy.png">
+                        <div class="thumbnail narrow90">
+                            <img src="/static/img/kit%20list/2.png">
                             <div class="caption">
                                 <div class="row">
                                     <div class="col-sm-9 vertical-line description">
@@ -55,8 +55,8 @@
             <div class="col-lg-4">
                 <div class="shop-card">
                     <a href="/holiday-cookie">
-                        <div class="thumbnail">
-                            <img src="/static/img/kit%20list/0001la.png">
+                        <div class="thumbnail narrow90">
+                            <img src="/static/img/kit%20list/3.png">
                             <div class="caption">
                                 <div class="row">
                                     <div class="col-sm-9 vertical-line description">
@@ -81,8 +81,8 @@
             <div class="col-lg-4">
                 <div class="shop-card">
                     <a href="/plant-cake">
-                        <div class="thumbnail">
-                            <img src="/static/img/kit%20list/IMG_6811.png">
+                        <div class="thumbnail narrow90">
+                            <img src="/static/img/kit%20list/4.png">
                             <div class="caption">
                                 <div class="row">
                                     <div class="col-sm-9 vertical-line description">
@@ -102,8 +102,8 @@
             <div class="col-lg-4">
                 <div class="shop-card">
                     <a href="/popcake">
-                        <div class="thumbnail">
-                            <img src="/static/img/kit%20list/2.pic%20copy.png">
+                        <div class="thumbnail narrow90">
+                            <img src="/static/img/kit%20list/5.png">
                             <div class="caption">
                                 <div class="row">
                                     <div class="col-sm-9 vertical-line description">
@@ -122,8 +122,8 @@
             <div class="col-lg-4">
                 <div class="shop-card">
                     <a href="/Butter-koekje">
-                        <div class="thumbnail">
-                            <img src="/static/img/kit%20list/FullSizeRender%204.png">
+                        <div class="thumbnail narrow90">
+                            <img src="/static/img/kit%20list/6.png">
                             <div class="caption">
                                 <div class="row">
                                     <div class="col-sm-9 vertical-line description">
