--- a/templates/tips.html
+++ b/templates/tips.html
@@ -2,14 +2,17 @@
 {% block content %}
 
     <!-- 2 for each line-->
-    <div class="row">
-        {% for i in ele %}
-            <div class="col-sm-6">
-                <div class="card yy-card">
-                    <img src="{{ i }}"/>
-                </div>
+    <div class="narrow80 heigh80">
+        <div class="row">
+                <div class="col-sm-6 align-center">
+                    <div class="card yy-card">
+                        <div class="thumbnail">
+                            <div class="media">
+                                <iframe width="640" height="360" src="https://www.youtube.com/embed/Mu1V2NoAZqI" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+            </div>
         </div>
-        {% endfor %}
     </div>
-
 {% endblock %}
