--- a/templates/flowers-cookies.html
+++ b/templates/flowers-cookies.html
@@ -5,9 +5,9 @@
 
     <div class="row">
         <div class="col-lg-8">
-            <div class="shop-detail-left">
+            <div class="shop-detail">
                 <div class="thumbnail">
-                    <img src="/static/img/POPCAKE/1.png">
+                    <img src="/static/img/flowers%20cookies/1.png">
                 </div>
             </div>
         </div>
@@ -18,7 +18,7 @@
                         <div class="description">Butter Koekje decoration kit</div>
                     </div>
                     <div class="col-sm-3">
-                        <div class="price">$16</div>
+                        <div class="price">$12</div>
                     </div>
                 </div>
             </div>
@@ -39,25 +39,26 @@
             </div>
 
             <div class="product-content">
-                <p>Dessert Decor Popcake Kit provides the necessary tools and components in your DIY dessert!
-                    Decorate your own cake now! Designed for ages eight and up.</p>
-                <p>Order your Dessert Decor blueberry cheese cake Kit. Ships week of purchase.</p>
+                <p>Dessert Decor Flowers cookies Kit provides the necessary tools and components in your DIY
+                    dessert! Decorate your own cake now! Designed for ages eight and up.</p>
+                <p>Order your Dessert Decor Flowers cookies Kit. Ships week of purchase.</p>
             </div>
         </div>
 
     </div>
 
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-7">
 
-            <div class="shop-detail-left">
+            <div class="shop-detail">
                 <div class="thumbnail">
                     <div class="purple">
                         <div class="subtitle">
-                            <p>What's in the Popcake decoration kit?</p>
+                            <p>What's in the blue cheesecake decoration kit?</p>
                         </div>
                     </div>
                     <div class="receipt">
+
                         <p>Manual</p>
                         <p>5 popcakes</p>
                         <p>1 tweezer</p>
@@ -66,15 +67,16 @@
                         <p>1 pink gliter powder</p>
                         <p>1 silver gliter powder</p>
 
+
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="col-lg-6">
-            <div class="shop-detail-right">
+        <div class="col-lg-5">
+            <div class="shop-detail">
                 <div class="thumbnail">
-                    <img src="/static/img/popcake/2.png">
+                    <img src="/static/img/flowers%20cookies/2.png">
                 </div>
             </div>
         </div>
@@ -83,7 +85,7 @@
     <div class="shop-detail wider">
 
         <div class="thumbnail">
-            <img src="/static/img/popcake/3.png">
+            <img src="/static/img/flowers%20cookies/3.png">
         </div>
     </div>
 
@@ -91,7 +93,7 @@
     <div class="shop-detail wider">
 
         <div class="thumbnail">
-            <img src="/static/img/popcake/4.png">
+            <img src="/static/img/flowers%20cookies/4.png">
         </div>
     </div>
 
@@ -105,7 +107,7 @@
     <div class="row">
         <div class="col-lg-5">
             <div class="thumbnail">
-                <img src="/static/img/popcake/5.png">
+                <img src="/static/img/flowers%20cookies/5.png">
             </div>
         </div>
     </div>
