--- a/templates/base.html
+++ b/templates/base.html
@@ -34,9 +34,9 @@
                         </a>
                     </li>
                     <li>
-                        <div class="container-fluid">
-                            <a class="nav-brand" href="#">
-                                <img alt="Brand" src="{% static "img/title.png" %}">
+                        <div class="container-fluid thumbnail">
+                            <a class="nav-brand" href="home">
+                                <img alt="Brand" src="{% static "img/Dessert Decor1.png" %}">
                             </a>
                         </div>
                     </li>
