--- a/templates/blog.html
+++ b/templates/blog.html
@@ -36,7 +36,7 @@
 
                 </div>
                 <div class="col-sm-7 ">
-                    <p class="yy-blog-title">Foodplay @Wework office</p>
+                    <p class="yy-blog-title"><a href="/wework"> Dessert Decor  @Wework office</a></p>
                     <p class="datetime">Feb 24, 2016</p>
                 </div>
             </div>
@@ -49,7 +49,7 @@
 
                 </div>
                 <div class="col-sm-7">
-                    <p class="yy-blog-title ">Foodplay @The New School</p>
+                    <p class="yy-blog-title "><a href="">Dessert Decor  @The New School</a> </p>
                     <p class="datetime">Feb 22, 2016</p>
                 </div>
             </div>
@@ -62,7 +62,7 @@
 
                 </div>
                 <div class="col-sm-7">
-                    <p class="yy-blog-title">Foodplay @Facebook page</p>
+                    <p class="yy-blog-title"><a href="/facebook">Dessert Decor @Facebook page</a> </p>
                     <p class="datetime">Nov 4, 2015</p>
                 </div>
             </div>
