--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -1,13 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <div class="row">
-        {% for i in ele %}
-            <div class="col-sm-6">
-                <div class="card yy-card">
-                    <img src="{{ i }}"/>
-                </div>
-            </div>
-        {% endfor %}
-    </div>
+
+<div class="article narrow76 top3">
+        <table>
+            <tr>
+                <td>
+                    <div class="thumbnail narrow80">
+
+                        <img src="/static/img/blog/facebook/1.png">
+                    </div>
+                </td>
+
+                <td>
+                    <div class="thumbnail narrow80">
+
+                        <img src="/static/img/blog/facebook/2.png">
+                    </div>
+                </td>
+
+            </tr>
+        </table>
+</div>
 {% endblock %}
