--- a/templates/base.html
+++ b/templates/base.html
@@ -34,9 +34,9 @@
                         </a>
                     </li>
                     <li>
-                        <div class="container-fluid thumbnail">
+                        <div class="container-fluid navbar-brand ">
                             <a class="nav-brand" href="home">
-                                <img alt="Brand" src="{% static "img/Dessert Decor1.png" %}">
+                                <img alt="Brand" class="brand-yy" src="{% static "img/Dessert Decor1.png" %}">
                             </a>
                         </div>
                     </li>
