--- a/templates/blog.html
+++ b/templates/blog.html
@@ -15,11 +15,11 @@
                         <p class="yy-content">Join us to stay up to date
                            on all things DIY, dessert&cake decoration!</p>
 
-                        <div class="input-group ">
+                        <div class="input-group top3">
                             <input type="email" class=" email-zone" placeholder="Email address">
                             <button type="button" class="btn-yy">Start</button>
                         </div>
-                        <div class="align-center">
+                        <div class="align-center top3">
                             <p>
                                 <b>Instagram:<a href="https://www.instagram.com/dessertdecor_official/">@dessertdecor_offical</a></b>
                             </p>
@@ -36,7 +36,7 @@
 
                 </div>
                 <div class="col-sm-7 ">
-                    <p class="yy-blog-title"><a href="/wework"> Dessert Decor  @Wework office</a></p>
+                    <p class="yy-blog-title"><a href="/wework" class="yy-theme-color"> Dessert Decor  @Wework office</a></p>
                     <p class="datetime">Feb 24, 2016</p>
                 </div>
             </div>
@@ -49,7 +49,7 @@
 
                 </div>
                 <div class="col-sm-7">
-                    <p class="yy-blog-title "><a href="">Dessert Decor  @The New School</a> </p>
+                    <p class="yy-blog-title "><a href="" class="yy-theme-color">Dessert Decor  @The New School</a> </p>
                     <p class="datetime">Feb 22, 2016</p>
                 </div>
             </div>
@@ -62,7 +62,7 @@
 
                 </div>
                 <div class="col-sm-7">
-                    <p class="yy-blog-title"><a href="/facebook">Dessert Decor @Facebook page</a> </p>
+                    <p class="yy-blog-title"><a href="/facebook" class="yy-theme-color">Dessert Decor @Facebook page</a> </p>
                     <p class="datetime">Nov 4, 2015</p>
                 </div>
             </div>
