--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 <span>
     <img  class="frame" src="/static/img/home/banner1.png">
     <span>
-        <button type="button" class="home-shop-button">SHOP KITS</button>
+        <button type="button" class="home-shop-button" onclick="window.location.href='/shop'">SHOP KITS</button>
     </span>
 </span>
 </div>
@@ -25,13 +25,13 @@
 </div>
 <div class="align-center yy-content">
     <div class="container sign-up">
-        <p>Sign up for DESSERT DECOR awesomeness!</p>
+        <p><b>Sign up for DESSERT DECOR awesomeness!</b></p>
 
     </div>
     <div class="container ">
         <div class="middle-panel">
             <input type="text" class="email-zone" placeholder="Email address">
-            <button type="button" class="btn-yy">Start</button>
+            <button type="button" class="btn-yy" >Start</button>
         </div>
     </div>
 
