--- a/templates/popcake.html
+++ b/templates/popcake.html
@@ -38,7 +38,7 @@
                 </p>
             </div>
 
-            <div class="product-content">
+            <div class="product-content top3 bottom2">
                 <p>Dessert Decor Popcake Kit provides the necessary tools and components in your DIY dessert!
                     Decorate your own cake now! Designed for ages eight and up.</p>
                 <p>Order your Dessert Decor blueberry cheese cake Kit. Ships week of purchase.</p>
@@ -88,7 +88,7 @@
     </div>
 
 
-    <div class="shop-detail wider">
+    <div class="shop-detail wider bottom2">
 
         <div class="thumbnail">
             <img src="/static/img/popcake/4.png">
@@ -96,13 +96,13 @@
     </div>
 
 
-    <div class="purple">
+    <div class="purple top3">
         <div class="subtitle">
             <p>How can I play with blueberry cheesecake decoration kit?</p>
         </div>
     </div>
 
-    <div class="row">
+    <div class="row top3">
         <div class="col-lg-5">
             <div class="thumbnail">
                 <img src="/static/img/popcake/5.png">
