--- a/templates/shop.html
+++ b/templates/shop.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="first_frame">
+    <div class="first_frame bottom2">
         <span>
             <img  class="frame non-padding" src="/static/img/kit%20list/pic1.png">
         </span>
     </div>
     <div class="container yy-content align-center">
-        <div class="title-shop top3 ">
+        <div class="title-shop top3 bottom2">
             <p> Creative Decoration Kits</p>
         </div>
 
@@ -15,14 +15,15 @@
                 <div class="shop-card">
                     <a href="/cheese-cake">
                         <div class="thumbnail narrow90">
-                            <img src="/static/img/kit%20list/1.png">
-                            <div class="caption">
+
+                            <img src="/static/img/kit%20list/1.png" class="bottom5">
+                            <div class="caption top3">
                                 <div class="row">
                                     <div class="col-sm-9 vertical-line description">
                                         <div class="description">Blueberry cheese cake decoration kit</div>
                                     </div>
                                     <div class="col-sm-3 price">
-                                        <h1>$16</h1>
+                                        <p>$16</p>
                                     </div>
                                 </div>
                             </div>
@@ -36,14 +37,14 @@
                 <div class="shop-card">
                     <a href="/butter-cookie">
                         <div class="thumbnail narrow90">
-                            <img src="/static/img/kit%20list/2.png">
-                            <div class="caption">
+                            <img src="/static/img/kit%20list/2.png" class="bottom5">
+                            <div class="caption top3">
                                 <div class="row">
                                     <div class="col-sm-9 vertical-line description">
                                         <div class="description">Icing butter cookies decoration kit</div>
                                     </div>
                                     <div class="col-sm-3 price">
-                                        <h1>$8</h1>
+                                        <p>$8</p>
                                     </div>
                                 </div>
                             </div>
@@ -56,14 +57,14 @@
                 <div class="shop-card">
                     <a href="/holiday-cookie">
                         <div class="thumbnail narrow90">
-                            <img src="/static/img/kit%20list/3.png">
-                            <div class="caption">
+                            <img src="/static/img/kit%20list/3.png" class="bottom5">
+                            <div class="caption top3">
                                 <div class="row">
                                     <div class="col-sm-9 vertical-line description">
                                         <div class="description">Holiday cookies decoration kit</div>
                                     </div>
                                     <div class="col-sm-3 price">
-                                        <h1>$10</h1>
+                                        <p>$10</p>
                                     </div>
                                 </div>
                             </div>
@@ -82,14 +83,14 @@
                 <div class="shop-card">
                     <a href="/plant-cake">
                         <div class="thumbnail narrow90">
-                            <img src="/static/img/kit%20list/4.png">
-                            <div class="caption">
+                            <img src="/static/img/kit%20list/4.png" class="bottom5">
+                            <div class="caption top3">
                                 <div class="row">
                                     <div class="col-sm-9 vertical-line description">
                                         <div class="description">Plant cake decoration kit</div>
                                     </div>
                                     <div class="col-sm-3 price">
-                                        <h1>$18</h1>
+                                        <p>$18</p>
                                     </div>
                                 </div>
                             </div>
@@ -103,14 +104,14 @@
                 <div class="shop-card">
                     <a href="/popcake">
                         <div class="thumbnail narrow90">
-                            <img src="/static/img/kit%20list/5.png">
-                            <div class="caption">
+                            <img src="/static/img/kit%20list/5.png" class="bottom5">
+                            <div class="caption top3">
                                 <div class="row">
                                     <div class="col-sm-9 vertical-line description">
                                         <div class="description">Popcake decoration kit</div>
                                     </div>
                                     <div class="col-sm-3 price">
-                                        <h1>$8</h1>
+                                        <p>$8</p>
                                     </div>
                                 </div>
                             </div>
@@ -123,14 +124,14 @@
                 <div class="shop-card">
                     <a href="/Butter-koekje">
                         <div class="thumbnail narrow90">
-                            <img src="/static/img/kit%20list/6.png">
-                            <div class="caption">
+                            <img src="/static/img/kit%20list/6.png" class="bottom5">
+                            <div class="caption top3">
                                 <div class="row">
                                     <div class="col-sm-9 vertical-line description">
                                         <div class="description">Butter Koekje decoration kit</div>
                                     </div>
                                     <div class="col-sm-3 price">
-                                        <h1>$12</h1>
+                                        <p>$12</p>
                                     </div>
                                 </div>
                             </div>
