--- a/templates/tips.html
+++ b/templates/tips.html
@@ -8,11 +8,22 @@
                     <div class="card yy-card">
                         <div class="thumbnail">
                             <div class="media">
-                                <iframe width="640" height="360" src="https://www.youtube.com/embed/Mu1V2NoAZqI" frameborder="0" allowfullscreen></iframe>
+                                <iframe width="513" height="366" src="https://www.youtube.com/embed/Mu1V2NoAZqI" frameborder="0" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
-            </div>
+                </div>
+
+                <div class="col-sm-6 align-center">
+                    <div class="card yy-card">
+                        <div class="thumbnail">
+                            <div class="media">
+                                <iframe width="513" height="366" src="https://www.youtube.com/embed/gaNmZmwdLqY" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
         </div>
     </div>
 {% endblock %}
