--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -32,6 +32,9 @@
 .bottom2{
     padding-bottom: 2%;
 }
+.bottom5{
+    padding-bottom: 5%;
+}
 
 .navi {
     background-color: rgb(75, 176, 158);
@@ -39,11 +42,10 @@
 }
 
 .navi-opt {
-    margin-top: 18px;
+    margin-top: 5px;
     padding-bottom: auto;
     color: white;
-    padding-top: 5px;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .navi-opt > a {
@@ -87,7 +89,7 @@
 
 .pad-container{
     padding-top: 10%;
-    padding-bottom: 10%;
+    padding-bottom: 2%;
 
 }
 
@@ -188,6 +190,11 @@ html, body {
     font-size: 25px;
 }
 
+.yy-theme-color{
+    color: #44BDA7;
+
+}
+
 .first_frame{
     width: 100%;
     text-align: center;
@@ -236,14 +243,17 @@ html, body {
 }
 
 .description{
-    font-size: 25px;
+    font-size: 20px;
     padding-bottom: 4px;
     padding-top:4px;
     font-family: 'Lantinghei SC';
 }
 
 .price{
-    font-size: 30px;
+    font-size: 22px;
+    padding-top: 6%;
+    color:purple;
+    font-weight: 400;
 }
 
 .purple{
@@ -263,7 +273,8 @@ html, body {
     padding-right: 10%;
 }
 .receipt{
-    max-height:400px;
+    color: darkgrey;
+    font-size: 18px;
     float: left;
 }
 
@@ -284,4 +295,28 @@ html, body {
 .blog-summary{
     padding-right: 3%;
 
+}
+
+.brand-yy{
+    max-width: 150px;
+}
+.Add-tocart{
+    margin: 10px 0px;
+    padding: 10px 30px;
+    background-color: purple;
+    color: white;
+    border: none;
+}
+
+.subtitle{
+    font-size: 23px;
+}
+.sm-title{
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.title-shop{
+    font-weight: 500;
+    font-size: 20px;
 }
