--- a/templates/cheese-cake.html
+++ b/templates/cheese-cake.html
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col-lg-8">
-            <div class="shop-detail">
+            <div class="shop-detail-left">
                 <div class="thumbnail">
                     <img src="/static/img/cheese%20cake%20detail/_DSC3836.png">
                 </div>
@@ -38,7 +38,7 @@
                 </p>
             </div>
 
-            <div class="product-content">
+            <div class="product-content top3 bottom2">
                 <p>Dessert Decor Blueberry cheesecake Kit provides the necessary tools and components in your DIY
                     dessert! Decorate your own cake now! Designed for ages eight and up.</p>
                 <p>Order your Dessert Decor blueberry cheese cake Kit. Ships week of purchase.</p>
@@ -50,7 +50,7 @@
     <div class="row">
         <div class="col-lg-7">
 
-            <div class="shop-detail">
+            <div class="shop-detail-left">
                 <div class="thumbnail">
                     <div class="purple">
                         <div class="subtitle">
@@ -58,14 +58,23 @@
                         </div>
                     </div>
                     <div class="receipt">
-                    <img src="/static/img/cheese%20cake%20detail/Group.png" class="receipt">
+                        <p>Manual</p>
+                        <p>A 5" * 3" Blueberry Cheese cake</p>
+                        <p>2 Decoration bags</p>
+                        <p>2 Nozzle with different sizes</p>
+                        <p>1 tweezers</p>
+                        <p>3 Decoration suger flowers</p>
+                        <p>30g pink decoration glitter powder</p>
+                        <p>50g heavy cream</p>
+                        <p>2g green/red/blue food coloring</p>
+                        <p>15 Decoration pearls</p>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="col-lg-5">
-            <div class="shop-detail">
+            <div class="shop-detail-right">
                 <div class="thumbnail">
                     <img src="/static/img/cheese%20cake%20detail/_DSC3824%202.png">
                 </div>
@@ -81,7 +90,7 @@
     </div>
 
 
-    <div class="shop-detail wider">
+    <div class="shop-detail wider bottom2">
 
         <div class="thumbnail">
             <img src="/static/img/cheese%20cake%20detail/pic2.png">
@@ -89,13 +98,13 @@
     </div>
 
 
-    <div class="purple">
+    <div class="purple top3">
         <div class="subtitle">
             <p>How can I play with blueberry cheesecake decoration kit?</p>
         </div>
     </div>
 
-    <div class="row">
+    <div class="row top3">
         <div class="col-lg-5">
             <div class="thumbnail">
                 <img src="/static/img/cheese%20cake%20detail/_DSC3801.png">
