--- a/templates/flowers-cookies.html
+++ b/templates/flowers-cookies.html
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col-lg-8">
-            <div class="shop-detail">
+            <div class="shop-detail-left">
                 <div class="thumbnail">
                     <img src="/static/img/flowers%20cookies/1.png">
                 </div>
@@ -38,7 +38,7 @@
                 </p>
             </div>
 
-            <div class="product-content">
+            <div class="product-content top3 bottom2">
                 <p>Dessert Decor Flowers cookies Kit provides the necessary tools and components in your DIY
                     dessert! Decorate your own cake now! Designed for ages eight and up.</p>
                 <p>Order your Dessert Decor Flowers cookies Kit. Ships week of purchase.</p>
@@ -50,7 +50,7 @@
     <div class="row">
         <div class="col-lg-7">
 
-            <div class="shop-detail">
+            <div class="shop-detail-left">
                 <div class="thumbnail">
                     <div class="purple">
                         <div class="subtitle">
@@ -74,7 +74,7 @@
         </div>
 
         <div class="col-lg-5">
-            <div class="shop-detail">
+            <div class="shop-detail-right">
                 <div class="thumbnail">
                     <img src="/static/img/flowers%20cookies/2.png">
                 </div>
@@ -90,7 +90,7 @@
     </div>
 
 
-    <div class="shop-detail wider">
+    <div class="shop-detail wider bottom2">
 
         <div class="thumbnail">
             <img src="/static/img/flowers%20cookies/4.png">
@@ -98,13 +98,13 @@
     </div>
 
 
-    <div class="purple">
+    <div class="purple top3">
         <div class="subtitle">
             <p>How can I play with blueberry cheesecake decoration kit?</p>
         </div>
     </div>
 
-    <div class="row">
+    <div class="row top3">
         <div class="col-lg-5">
             <div class="thumbnail">
                 <img src="/static/img/flowers%20cookies/5.png">
