--- a/templates/popcake.html
+++ b/templates/popcake.html
@@ -7,7 +7,7 @@
         <div class="col-lg-8">
             <div class="shop-detail-left">
                 <div class="thumbnail">
-                    <img src="/static/img/POPCAKE/1.png">
+                    <img src="/static/img/popcake/1.png">
                 </div>
             </div>
         </div>
